--- a/MyTVCompanion/MyTVCompanion/SettingsWindow.xaml
+++ b/MyTVCompanion/MyTVCompanion/SettingsWindow.xaml
@@ -1,6 +1,7 @@
 ﻿<Window x:Class="MyTVCompanion.SettingsWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:System="clr-namespace:System;assembly=mscorlib"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        DataContext="{Binding RelativeSource={RelativeSource Self}}"
         Title="SettingsWindow" Height="350" Width="525">
     <Grid>
         <Grid.ColumnDefinitions>
@@ -14,7 +15,7 @@
                     <ColumnDefinition Width="Auto" />
                 </Grid.ColumnDefinitions>
                 <TextBox Grid.Column="0" x:Name="SearchBox" Text="Search for a TV show" Margin="0,0,5,0"  />
-                <Button Grid.Column="1" Content="Search" Width="39" Click="Button_Click_1"/>
+                <Button Grid.Column="1" Content="Search" Width="39" Click="SearchButtonClick"/>
             </Grid>
             <ListView x:Name="SearchResults">
                 <ListView.ItemTemplate>
@@ -23,17 +24,16 @@
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
-            <Button Content="Add selected show" Click="Button_Click_2"/>
+            <Button Content="Add selected show" Click="AddButtonClick"/>
         </StackPanel>
         <StackPanel Grid.Row="0" Grid.Column="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
             <Label HorizontalAlignment="Center" Content="My shows" />
-            <ListView>
-                <ListView.Items>
-                    <ListViewItem Content="Example show" />
-                    <ListViewItem Content="Example show" />
-                    <ListViewItem Content="Example show" />
-                    <ListViewItem Content="Example show" />
-                </ListView.Items>
+            <ListView x:Name="ShowsListView" ItemsSource="{Binding Shows}">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <ListViewItem Content="{Binding Path=SeriesName}" />
+                    </DataTemplate>
+                </ListView.ItemTemplate>
             </ListView>
         </StackPanel>
     </Grid>
