--- a/MyTVCompanion/MyTVCompanion/SettingsWindow.xaml
+++ b/MyTVCompanion/MyTVCompanion/SettingsWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         DataContext="{Binding RelativeSource={RelativeSource Self}}"
-        Title="SettingsWindow" Height="350" Width="525">
+        Title="Settings - MyTVCompanion" Height="350" Width="525">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
