Lab 3 codebase and first docx draft.

--- a/MyTVCompanion/MyTVCompanion/App.xaml
+++ b/MyTVCompanion/MyTVCompanion/App.xaml
@@ -4,6 +4,10 @@
              StartupUri="MainWindow.xaml"
              Exit="AppExit">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="MyTVCompanionResources.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
