--- a/MyTVCompanion/MyTVCompanion/SettingsWindow.xaml
+++ b/MyTVCompanion/MyTVCompanion/SettingsWindow.xaml
@@ -2,32 +2,39 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         DataContext="{Binding RelativeSource={RelativeSource Self}}"
-        Title="Settings - MyTVCompanion" Height="350" Width="525">
-    <Grid>
+        Title="Settings - MyTVCompanion" Height="350" Width="525"
+        WindowStartupLocation="CenterOwner">
+    <Grid Style="{DynamicResource GridStyle}">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="10"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
-        <StackPanel Grid.Row="0" Grid.Column="0" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
-            <Grid>
+        <Grid Grid.Row="0" Grid.Column="0" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="*" />
+                <RowDefinition Height="Auto" />
+            </Grid.RowDefinitions>
+            <Grid Grid.Row="0">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="Auto" />
                 </Grid.ColumnDefinitions>
                 <TextBox Grid.Column="0" x:Name="SearchBox" Text="Search for a TV show" Margin="0,0,5,0"  />
-                <Button Grid.Column="1" Content="Search" Width="39" Click="SearchButtonClick"/>
+                <Button Grid.Column="1" Content="Search" Click="SearchButtonClick" Style="{DynamicResource ButtonStyle}"/>
             </Grid>
-            <ListView x:Name="SearchResults">
+            <ListView Grid.Row="1" x:Name="SearchResults" Margin="0,10">
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <TextBlock Text="{Binding Path=SeriesName}" />
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
-            <Button Content="Add selected show" Click="AddButtonClick"/>
-        </StackPanel>
-        <StackPanel Grid.Row="0" Grid.Column="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
-            <Label HorizontalAlignment="Center" Content="My shows" />
+            <Button Grid.Row="2" Content="Add selected show" Click="AddButtonClick" Style="{DynamicResource ButtonStyle}"/>
+        </Grid>
+        <StackPanel Grid.Row="0" Grid.Column="2" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+            <Label HorizontalAlignment="Center" Content="My shows" Style="{DynamicResource HeaderLabelStyle}" />
             <ListView x:Name="ShowsListView" ItemsSource="{Binding Shows}">
                 <ListView.ItemTemplate>
                     <DataTemplate>
