--- a/MyTVCompanion/MyTVCompanion/App.xaml
+++ b/MyTVCompanion/MyTVCompanion/App.xaml
@@ -1,8 +1,7 @@
 ﻿<Application x:Class="MyTVCompanion.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="MainWindow.xaml"
-             Exit="AppExit">
+             StartupUri="MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
