--- a/MyTVCompanion/MyTVCompanion/MainWindow.xaml
+++ b/MyTVCompanion/MyTVCompanion/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:System="clr-namespace:System;assembly=mscorlib"
-        DataContext="{Binding RelativeSource={RelativeSource Self}}"
+        DataContext="{Binding ViewModel, RelativeSource={RelativeSource Self}}"
         Title="MyTVCompanion" Height="350" Width="525"
         WindowStartupLocation="CenterScreen">
 
