--- a/MyTVCompanion/MyTVCompanion/SettingsWindow.xaml
+++ b/MyTVCompanion/MyTVCompanion/SettingsWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="MyTVCompanion.SettingsWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        DataContext="{Binding RelativeSource={RelativeSource Self}}"
+        DataContext="{Binding ViewModel, RelativeSource={RelativeSource Self}}"
         Title="Settings - MyTVCompanion" Height="350" Width="525"
         WindowStartupLocation="CenterOwner">
     <Grid Style="{DynamicResource GridStyle}">
