--- a/WP8RHITBandwidth/WP8RHITBandwidth/MainPage.xaml
+++ b/WP8RHITBandwidth/WP8RHITBandwidth/MainPage.xaml
@@ -14,6 +14,16 @@
     SupportedOrientations="Portrait"  Orientation="Portrait"
     shell:SystemTray.IsVisible="False">
 
+    <phone:PhoneApplicationPage.ApplicationBar>
+        <shell:ApplicationBar IsVisible="True" IsMenuEnabled="False">
+            <shell:ApplicationBar.Buttons>
+                <shell:ApplicationBarIconButton Text="credentials" 
+                                                IconUri="/Assets/AppBar/feature.settings.png"
+                                                Click="SettingsButtonClick"/>
+            </shell:ApplicationBar.Buttons>
+        </shell:ApplicationBar>
+    </phone:PhoneApplicationPage.ApplicationBar>
+
     <!--LayoutRoot is the root grid where all page content is placed-->
     <Grid x:Name="LayoutRoot" Background="Transparent">
 
